@@ -27,10 +27,8 @@ package hudson.security;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.model.Hudson;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.CopyOnWriteArrayList;
@@ -150,7 +148,7 @@ public final class Permission {
         this.description = description;
         this.impliedBy = impliedBy;
         this.enabled = enable;
-        this.scopes = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(scopes)));
+        this.scopes = Set.of(scopes);
         this.id = owner.getName() + '.' + name;
 
         group.add(this);
